--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "keywords": [
     "BallStep2","บอลสเต็ป2","แทงบอล","บอลคู่","บอลเดี่ยว","บอลสเต็ป","ราคาน้ำ" 
   ],
-  "repository": "https://github.com/ambkingdom/2in2",
+  "repository": "https://github.com/wtharworn11/BallStep2",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
